# geoplanar

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml  unittests.yml
ci/: 310-latest.yaml  310-oldest.yaml  311-latest.yaml  312-dev.yaml  312-latest.yaml  37.yaml  38.yaml  39.yaml
datasets/: README.md
docs/: README.rst  conf.py  environment.yml  gaps.ipynb  holes.ipynb  index.rst  nonplanaredges.ipynb  nonplanartouches.ipynb  overlaps.ipynb  reference.rst  usmex.ipynb
docs/_templates/: docs-sidebar.html
geoplanar/: __init__.py  _version.py  gap.py  hole.py  overlap.py  planar.py  valid.py
geoplanar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
geoplanar/datasets/: README.md
geoplanar/tests/: test_compact.py  test_gap.py  test_hole.py  test_overlap.py  test_planar.py
notebooks/: Africa(Ethiopia_Somalia).ipynb  Can_US_Contiguity.ipynb  Comparison.ipynb  Gaps_USCAN.ipynb  README.md  Test_file.ipynb  US-Mexicolevel1.ipynb  US_Canada.ipynb  basemap_US_Canada.ipynb  comparison_test.ipynb  data_processing_1.ipynb  gaps.ipynb  holc_ex.ipynb  holes.ipynb  holes.md  india.ipynb  india.md  nonplanaredges.ipynb  nonplanartouches.ipynb  overlaps.ipynb  slivers.ipynb  snap.ipynb  test_1.ipynb  touching.ipynb  usmex.ipynb  usmex_level1.ipynb  usmex_level1_changes.ipynb  usmex_level1_contiguity.ipynb  usmex_level2.ipynb  usmex_level2_contiguity.ipynb  usmex_level_1_contiguity.ipynb
notebooks/usmex/: README.md  (+9 more)
(+45 files in other folders)
